--- a/index.html
+++ b/index.html
@@ -34,12 +34,12 @@
 
     L.geoJson(delays).addTo(mymap);
     function getColor(d) {
-    return d > 9 ? '#980043' :
-           d > 7  ? '#dd1c77' :
-           d > 5  ? '#df65b0' :
-           d > 3  ? '#d7b5d8' :
-           d > 2   ? '#f1eef6' :
-                      '#f1eef6';
+    return d > 9 ? '#a50f15' :
+           d > 7  ? '#de2d26' :
+           d > 5  ? '#fb6a4a' :
+           d > 3  ? '#fcae91' :
+           d > 2   ? '#fee5d9' :
+                      '#fee5d9';
 }
 function style(feature) {
     return {
