--- a/index.html
+++ b/index.html
@@ -70,6 +70,25 @@ function addPopup (feature,layer){
   layer.bindPopup("<h2>"+ feature.properties.EER13NM +"</h2>" + "Delays per 100,000 population: " + feature.properties.delays + "</br></br> Delays per 100,000 population, because of lack of social care: " + feature.properties.delayssocialcare);
 };
 L.geoJson()
+      
+// This adds the bit of info in the corner
+      
+var info = L.control();
+
+info.onAdd = function (mymap) {
+    this._div = L.DomUtil.create('div', 'info'); // create a div with a class "info"
+    this.update();
+    return this._div;
+};
+
+// method that we will use to update the control based on feature properties passed
+info.update = function (props) {
+    this._div.innerHTML = '<h4>US Population Density</h4>' +  (props ?
+        '<b>' + props.name + '</b><br />' + props.density + ' people / mi<sup>2</sup>'
+        : 'Hover over a state');
+};
+
+info.addTo(mymap);
 
 // Adds the styling and the pop ups to the map
 L.geoJson(delays, {
