--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@ L.geoJson(delays, {
       
 //This adds the legend: 
       
-var legend = L.control({position: 'bottomright'});
+var legend = L.control({position: 'bottom'});
 
 legend.onAdd = function (mymap) {
 
