--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <title>NHS delays map</title>
   <meta name="description" content="NHS delays">
   <meta name="author" content="SitePoint">
-  <style>#mapid { height: 800px; height: 100%; }</style>
+  <style>#mapid { height: 800px; width: 100%; }</style>
   <style>.legend {
     line-height: 18px;
     color: #555;
