--- a/index.html
+++ b/index.html
@@ -38,8 +38,7 @@
     <script>
     var mymap = L.map('mapid').setView([52.486, -1.89], 6);
     L.tileLayer('https://api.tiles.mapbox.com/v4/{id}/{z}/{x}/{y}.png?access_token={accessToken}', {
-        attribution: 'Map data &copy; <a href="http://openstreetmap.org">OpenStreetMap</a> contributors, 
-        <a href="http://creativecommons.org/licenses/by-sa/2.0/">CC-BY-SA</a>, Imagery © <a href="http://mapbox.com">Mapbox</a>',
+        attribution: 'Map data &copy; <a href="http://openstreetmap.org">OpenStreetMap</a> contributors, <a href="http://creativecommons.org/licenses/by-sa/2.0/">CC-BY-SA</a>, Imagery © <a href="http://mapbox.com">Mapbox</a>',
            maxZoom: 18,
            id: 'mapbox.light',
            accessToken: 'pk.eyJ1Ijoicm9zYWUiLCJhIjoiY2pidW5rdHo3MXIyczJ4bnh2cWp1OWEwZSJ9.Nj-OKYdjBRXNs50cbPGBDA'
